dynamic-rupture/regional-only/automated-runs/test_yaml_build/logs/jobid_3875704/3875704.regional-only.out
Tue 03 Sep 2024 11:51:40 PM UTC
num_nodes: 16 ntasks: 16 cpus_per_task:
Line 63 replaced with: OutputFile='/hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875704'
Job log complete.
Starting SeisSol...
Wed Sep 04 01:51:41, Info:  Using the parameter file parameters.par 
Wed Sep 04 01:51:41, Info:  Reading SeisSol parameter file... 
Wed Sep 04 01:51:41, Info:  In your parameter file, you have specified a non-positive interval for "checkpointinterval" . This mechanism is deprecated and may be removed in a future version of SeisSol. Consider disabling the whole module by setting "checkpoint" to 0 instead by adding "checkpoint = 0" to the "output" section of your parameter file instead. 
Wed Sep 04 01:51:41, Info:  The field "printintervalcriterion" is no longer in use. You may safely remove it from your parameters file. 
Wed Sep 04 01:51:41, Info:  Disabling the wavefield output by setting "outputformat = 10" is deprecated and may be removed in a future version of SeisSol. Consider using the parameter "wavefieldoutput" instead. To disable wavefield output, add "wavefieldoutput = 0" to the "output" section of your parameters file. 
Wed Sep 04 01:51:41, Info:  The field "printintervalcriterion" is no longer in use. You may safely remove it from your parameters file. 
Wed Sep 04 01:51:41, Info:  The field "pickdttype" is no longer in use. You may safely remove it from your parameters file. 
Wed Sep 04 01:51:41, Info:  The field "faultoutputflag" is no longer in use. You may safely remove it from your parameters file. 
Wed Sep 04 01:51:41, Info:  The field "boundaries" is no longer in use. You may safely remove it from your parameters file. 
Wed Sep 04 01:51:41, Info:  SeisSol parameter file read successfully. 
Wed Sep 04 01:51:41, Info:  Model information: 
Wed Sep 04 01:51:41, Info:  Elastic model: yes 
Wed Sep 04 01:51:41, Info:  Viscoelastic model: no 
Wed Sep 04 01:51:41, Info:  Anelastic model: no 
Wed Sep 04 01:51:41, Info:  Poroelastic model: no 
Wed Sep 04 01:51:41, Info:  Anisotropic model: no 
Wed Sep 04 01:51:41, Info:  Plasticity: no 
Wed Sep 04 01:51:41, Info:  Welcome to SeisSol 
Wed Sep 04 01:51:41, Info:  Copyright (c) 2012 - 2024  SeisSol Group 
Wed Sep 04 01:51:41, Info:  Version: v1.1.4-148-g60aedc8c (dirty) 
Wed Sep 04 01:51:41, Info:  Built on: Jun 17 2024 21:03:35 
Wed Sep 04 01:51:41, Info:  Last commit: 60aedc8c2ae0a5d9e5a46cc3a40e4eaf1c047225 at 2024-06-06T12:54:08+00:00 
Wed Sep 04 01:51:41, Info:  Compiled with HOST_ARCH = skx 
Wed Sep 04 01:51:41, Info:  Running on (rank=0): "i01r01c03s01" 
Wed Sep 04 01:51:41, Info:  Using MPI with #ranks: 16 
Wed Sep 04 01:51:41, Info:  Node-wide (shared memory) MPI with #ranks/node: 1 
Wed Sep 04 01:51:41, Info:  Using asynchronous MPI routines. 
Wed Sep 04 01:51:41, Info:  Using OMP with #threads/rank: 94 
Wed Sep 04 01:51:41, Info:  OpenMP worker affinity (this process): "0123456789|0123456789|0123456789|0123456789|0123456-89|0123456789|0123456789|0123456789|0123456789|01234-" 
Wed Sep 04 01:51:41, Info:  OpenMP worker affinity (this node)   : "0123456789|0123456789|0123456789|0123456789|0123456-89|0123456789|0123456789|0123456789|0123456789|01234-" 
Wed Sep 04 01:51:41, Info:  Using a communication thread for advancing MPI communication. 
Wed Sep 04 01:51:41, Info:  Communication thread affinity        : "----------|----------|----------|----------|-------7--|----------|----------|----------|----------|-----5" 
Wed Sep 04 01:51:41, Info:  The stack size ulimit is 2097152 [kiB] ( = 2.0000 GiB ). 
Wed Sep 04 01:51:41, Info:  Begin init mesh. 
Wed Sep 04 01:51:41, Info:  Mesh file: "/dss/dsshome1/01/di35poq/mesh/mesh_v07/Haiti_v07_lowres" 
Wed Sep 04 01:51:41, Info:  Running mini SeisSol to determine node weights. 
Wed Sep 04 01:51:41, Info:  miniSeisSol configured with 50000 elements and 10 repeats per process 
Wed Sep 04 01:51:41, Info:  Node weights: mean = 41.4942  std = 0.303104  min = 40.5833  median = 41.6001  max = 41.8063 
Wed Sep 04 01:51:41, Info:  Reading PUML mesh 
Wed Sep 04 01:51:41, Info:  Inferring boundary format. 
Wed Sep 04 01:51:41, Info:  Boundary format not given in PUML file; inferring from array shape. 
Wed Sep 04 01:51:41, Info:  Using boundary format: i32 (4xi8) 
Wed Sep 04 01:51:41, Info:  Found 2685422 cells 
Wed Sep 04 01:51:41, Info:  Found 477078 vertices 
Wed Sep 04 01:51:43, Info:  Computing LTS weights. 
Wed Sep 04 01:51:46, Info:  Limiting number of clusters to 2147483646 
Wed Sep 04 01:51:46, Info:  Computing LTS weights. Done.  (108216 reductions.)
Wed Sep 04 01:51:46, Info:  Using the Parmetis partition library and strategy. 
Wed Sep 04 01:51:49, Info:  PUML mesh read in: 7.6365 s (min: 7.5756 s, max: 7.7676 s)
Wed Sep 04 01:51:49, Info:  The mesh has been read. Starting post processing. 
Wed Sep 04 01:51:49, Info:  Extracting fault information. 
Wed Sep 04 01:51:49, Info:  Exchanging ghostlayer metadata. 
Wed Sep 04 01:51:51, Info:  Mesh initialized in: 9.6551 s (min: 9.6548 s, max: 9.6559 s)
Wed Sep 04 01:51:51, Info:  End init mesh. 
Wed Sep 04 01:51:51, Info:  Begin init model. 
Wed Sep 04 01:51:51, Info:  Initialize LTS. 
Wed Sep 04 01:51:51, Info:  Deriving clusters ids for min. time step width / multiRate: 0.000213316 / 2 
Wed Sep 04 01:51:51, Info:  Due to wiggle factor of 1 the minimum timestep size is reduced to 0.000213316 
Wed Sep 04 01:51:51, Info:  Number of elements in time clusters: 
Wed Sep 04 01:51:51, Info:  0: 2088 
Wed Sep 04 01:51:51, Info:  1: 265401 
Wed Sep 04 01:51:51, Info:  2: 1618976 
Wed Sep 04 01:51:51, Info:  3: 538212 
Wed Sep 04 01:51:51, Info:  4: 147352 
Wed Sep 04 01:51:51, Info:  5: 35652 
Wed Sep 04 01:51:51, Info:  6: 11329 
Wed Sep 04 01:51:51, Info:  7: 18592 
Wed Sep 04 01:51:51, Info:  8: 47781 
Wed Sep 04 01:51:51, Info:  9: 39 
Wed Sep 04 01:51:51, Info:  maximum theoretical speedup (compared to GTS): 6.4313 per cell LTS, 4.34786 with the used clustering. 
Wed Sep 04 01:51:51, Info:  Number of elements in dynamic rupture time clusters: 
Wed Sep 04 01:51:51, Info:  0 (dr): 617 
Wed Sep 04 01:51:51, Info:  1 (dr): 78807 
Wed Sep 04 01:51:51, Info:  2 (dr): 309943 
Wed Sep 04 01:51:51, Info:  3 (dr): 2510 
Wed Sep 04 01:51:51, Info:  4 (dr): 0 
Wed Sep 04 01:51:51, Info:  5 (dr): 0 
Wed Sep 04 01:51:51, Info:  6 (dr): 0 
Wed Sep 04 01:51:51, Info:  7 (dr): 0 
Wed Sep 04 01:51:51, Info:  8 (dr): 0 
Wed Sep 04 01:51:51, Info:  9 (dr): 0 
Wed Sep 04 01:51:51, Info:  Initialize Friction Model 
Wed Sep 04 01:51:51, Info:  Initialize cell material parameters. 
Wed Sep 04 01:51:53, Info:  Initialize Memory layout. 
Wed Sep 04 01:51:53, Info:  Initialize cell-local matrices. 
Wed Sep 04 01:51:53, Info:  Initializing Fault, using a quadrature rule with  25  points. 
Wed Sep 04 01:54:53, Info:  Model initialized in: 3 min 2.0703 s (min: 3 min 2.0679 s, max: 3 min 2.0738 s)
Wed Sep 04 01:54:53, Info:  End init model. 
Wed Sep 04 01:54:53, Info:  Setting initial conditions. 
Wed Sep 04 01:54:53, Info:  Using initial condition "Zero" . 
Wed Sep 04 01:54:53, Info:  Reading source. 
Wed Sep 04 01:54:53, Info:  No source term specified. 
Wed Sep 04 01:54:53, Info:  Setting up boundary conditions. 
Wed Sep 04 01:54:53, Info:  Begin init output. 
Wed Sep 04 01:54:53, Info:  Initializing free surface integrator. 
Wed Sep 04 01:54:53, Info:  Initializing free surface integrator. Done. 
Wed Sep 04 01:54:53, Info:  Enabling 2D fault output 
Wed Sep 04 01:54:53, Info:  Initializing Fault output. Number of sub-triangles: 4 
Wed Sep 04 01:54:53, Info:  Initializing XDMF fault output. 
Wed Sep 04 01:54:53, Info:  Fault writer thread affinity: "----------|----------|----------|----------|-------7--|----------|----------|----------|----------|-----5" 
Wed Sep 04 01:54:53, Info:  Initializing XDMF fault output. Done. 
Wed Sep 04 01:54:53, Info:  Initializing free surface output. 
Wed Sep 04 01:54:53, Info:  Free surface writer thread affinity: "----------|----------|----------|----------|-------7--|----------|----------|----------|----------|-----5" 
Wed Sep 04 01:54:53, Info:  No record points read. 
Wed Sep 04 01:54:53, Info:  Finding meshIds for receivers... 
Wed Sep 04 01:54:53, Info:  Cleaning possible double occurring receivers for MPI... 
Wed Sep 04 01:54:53, Info:  Mapping receivers to LTS cells... 
Wed Sep 04 01:54:53, Info:  Initializing energy output. 
Wed Sep 04 01:54:53, Info:  End init output. 
Wed Sep 04 01:54:53, Info:  Initializing free surface output. Done. 
Wed Sep 04 01:54:53, Info:  Finishing initialization... 
Wed Sep 04 01:54:53, Info:  Starting simulation. 
Wed Sep 04 01:54:53, Info:  Writing faultoutput at time 0.
Wed Sep 04 01:54:53, Info:  Writing faultoutput at time 0. Done.
Wed Sep 04 01:54:53, Info:  Writing free surface at time 0.
Wed Sep 04 01:54:53, Info:  Writing free surface at time 0. Done.
Wed Sep 04 01:54:53, Info:  Writing energy output at time 0 
Wed Sep 04 01:54:53, Info:  Total momentum (X, Y, Z): 0  , 0  , 0 
Wed Sep 04 01:54:53, Info:  Writing energy output at time 0 Done. 
Wed Sep 04 01:54:53, Info:  Time spent for initial IO: 52.9983 ms (min: 41.4937 ms, max: 71.6527 ms)
Wed Sep 04 01:55:20, Info:  Writing faultoutput at time 0.5.
Wed Sep 04 01:55:20, Info:  Writing faultoutput at time 0.5. Done.
Wed Sep 04 01:55:20, Info:  Writing energy output at time 0.5 
Wed Sep 04 01:55:20, Info:  Total momentum (X, Y, Z): 0  , 0  , 0 
Wed Sep 04 01:55:20, Info:  Writing energy output at time 0.5 Done. 
Wed Sep 04 01:55:20, Info:  Time spent this phase (total): 26.6952 s (min: 26.6608 s, max: 26.7269 s)
Wed Sep 04 01:55:20, Info:  Time spent this phase (compute): 26.6422 s (min: 26.6087 s, max: 26.6718 s)
Wed Sep 04 01:55:20, Info:  Time spent this phase (IO): 52.3386 ms (min: 39.8366 ms, max: 90.2794 ms)
Wed Sep 04 01:55:20, Info:  Performance since the start: 9.4283 TFLOP/s (rank 0: 583.4169 GFLOP/s , average over ranks: 589.2673 GFLOP/s ) 
Wed Sep 04 01:55:20, Info:  Performance since last sync point: 9.4283 TFLOP/s (rank 0: 583.4169 GFLOP/s , average over ranks: 589.2673 GFLOP/s ) 
Wed Sep 04 01:55:46, Info:  Writing faultoutput at time 1.
Wed Sep 04 01:55:46, Info:  Writing faultoutput at time 1. Done.
Wed Sep 04 01:55:46, Info:  Writing free surface at time 1.
Wed Sep 04 01:55:46, Info:  Writing free surface at time 1. Done.
Wed Sep 04 01:55:46, Info:  Wrote receivers in 3.11e-07 seconds. 
Wed Sep 04 01:55:46, Info:  Writing energy output at time 1 
Wed Sep 04 01:55:46, Info:  Total momentum (X, Y, Z): 0  , 0  , 0 
Wed Sep 04 01:55:46, Info:  Writing energy output at time 1 Done. 
Wed Sep 04 01:55:46, Info:  Time spent this phase (total): 26.4816 s (min: 26.4575 s, max: 26.5125 s)
Wed Sep 04 01:55:46, Info:  Time spent this phase (compute): 26.4814 s (min: 26.4574 s, max: 26.5124 s)
Wed Sep 04 01:55:46, Info:  Time spent this phase (IO): 54.4911 ms (min: 39.9942 ms, max: 83.0027 ms)
Wed Sep 04 01:55:46, Info:  Performance since the start: 9.4661 TFLOP/s (rank 0: 586.0647 GFLOP/s , average over ranks: 591.6339 GFLOP/s ) 
Wed Sep 04 01:55:46, Info:  Performance since last sync point: 9.5043 TFLOP/s (rank 0: 588.7366 GFLOP/s , average over ranks: 594.0200 GFLOP/s ) 
Wed Sep 04 01:55:46, Info:  Ignoring duplicate synchronisation point at time 1 ; the last sync point was at  1 
Wed Sep 04 01:55:46, Info:  Ignoring duplicate synchronisation point at time 1 ; the last sync point was at  1 
Wed Sep 04 01:55:46, Info:  Ignoring duplicate synchronisation point at time 1 ; the last sync point was at  1 
Wed Sep 04 01:55:46, Info:  Ignoring duplicate synchronisation point at time 1 ; the last sync point was at  1 
Wed Sep 04 01:55:46, Info:  Simulation time (total): 53.1770 s (min: 53.1303 s, max: 53.2129 s)
Wed Sep 04 01:55:46, Info:  Simulation time (compute): 53.0169 s (min: 52.9671 s, max: 53.0513 s)
Wed Sep 04 01:55:46, Info:  Simulation time (IO): 159.6873 ms (min: 121.2048 ms, max: 244.6002 ms)
Wed Sep 04 01:55:46, Info:  Time spent in compute kernels: mean = 50.591  std = 0.953151  min = 48.8935  median = 50.8619  max = 52.2599 
Wed Sep 04 01:55:46, Info:  Load imbalance: 3.19341 % 
Wed Sep 04 01:55:46, Info:  Regression analysis of compute kernels: 
Wed Sep 04 01:55:46, Info:  "computeLocalIntegration" (total time): 246.336 s ( = 4 min 6.3363 s ) 
Wed Sep 04 01:55:46, Info:  "computeLocalIntegration" ( constant ): 2.10931e-05 (sample size: 261814 , standard error: 2.9516e-11 ) 
Wed Sep 04 01:55:46, Info:  "computeLocalIntegration" ( per element ): 8.31108e-08 (sample size: 261814 , standard error: 2.9516e-11 ) 
Wed Sep 04 01:55:46, Info:  "computeNeighboringIntegration" (total time): 299.753 s ( = 4 min 59.7534 s ) 
Wed Sep 04 01:55:46, Info:  "computeNeighboringIntegration" ( constant ): 0.000135786 (sample size: 261814 , standard error: 3.14493e-11 ) 
Wed Sep 04 01:55:46, Info:  "computeNeighboringIntegration" ( per element ): 9.11829e-08 (sample size: 261814 , standard error: 3.14493e-11 ) 
Wed Sep 04 01:55:46, Info:  "computeDynamicRupture" (total time): 263.367 s ( = 4 min 23.3667 s ) 
Wed Sep 04 01:55:46, Info:  "computeDynamicRupture" ( constant ): 8.01555e-05 (sample size: 193966 , standard error: 1.99059e-10 ) 
Wed Sep 04 01:55:46, Info:  "computeDynamicRupture" ( per element ): 4.48671e-07 (sample size: 193966 , standard error: 1.99059e-10 ) 
Wed Sep 04 01:55:46, Info:  "computePointSources" (total time): 0 s ( = 0.0000 s ) 
Wed Sep 04 01:55:46, Info:  "computePointSources" ( constant ): -nan (sample size: 0 , standard error: -nan ) 
Wed Sep 04 01:55:46, Info:  "computePointSources" ( per element ): -nan (sample size: 0 , standard error: -nan ) 
Wed Sep 04 01:55:46, Info:  Total time spent in compute kernels: 809.456 s ( = 13 min 29.4563 s ) 
Wed Sep 04 01:55:46, Info:  Total calculated HW-FLOP:  503.3773 TFLOP 
Wed Sep 04 01:55:46, Info:  Total calculated NZ-FLOP:  201.2217 TFLOP 
Wed Sep 04 01:55:46, Info:  Total calculated HW-FLOP/s:  9.4597 TFLOP/s 
Wed Sep 04 01:55:46, Info:  Total calculated NZ-FLOP/s:  3.7814 TFLOP/s 
Wed Sep 04 01:55:46, Info:  WP calculated HW-FLOP:  417.0864 TFLOP 
Wed Sep 04 01:55:46, Info:  WP calculated NZ-FLOP:  137.0604 TFLOP 
Wed Sep 04 01:55:46, Info:  DR calculated HW-FLOP:  86.2910 TFLOP 
Wed Sep 04 01:55:46, Info:  DR calculated NZ-FLOP:  64.1613 TFLOP 
Wed Sep 04 01:55:46, Info:  PL calculated HW-FLOP:  0.0000 FLOP 
Wed Sep 04 01:55:46, Info:  PL calculated NZ-FLOP:  0.0000 FLOP 
Wed Sep 04 01:55:46, Info:  Time spent in simulation: 53.2135 s (min: 53.2135 s, max: 53.2144 s)
Wed Sep 04 01:55:46, Info:  Simulation done. 
Wed Sep 04 01:55:46, Info:  Closing IO. 
Wed Sep 04 01:55:46, Info:  Time free surface writer backend: 123.5433 ms (min: 917.7970 µs, max: 1.0498 s)
Wed Sep 04 01:55:47, Info:  Time fault writer backend: 357.6685 ms (min: 128.0188 ms, max: 3.0504 s)
Wed Sep 04 01:55:47, Info:  Time fault writer frontend: 3.1563 ms (min: 2.6496 ms, max: 3.5156 ms)
Wed Sep 04 01:55:47, Info:  Time free surface writer frontend: 1.2634 ms (min: 40.6990 µs, max: 8.0156 ms)
Wed Sep 04 01:55:47, Info:  SeisSol done. Goodbye. 
SeisSol complete.
/hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875704 ~/haiti-rupture-inputs/dynamic-rupture/regional-only/automated-runs/yaml_build_test/job_SHmax_40.0_nu_0.0
Writing hdf5 output with compression enabled (compression_level=4). 
Use --compression=0 if you want to speed-up data extraction.
u1: 0it [00:00, ?it/s]u1: 1it [00:00, 61.86it/s]
u2: 0it [00:00, ?it/s]u2: 1it [00:00, 52.21it/s]
u3: 0it [00:00, ?it/s]u3: 1it [00:00, 54.93it/s]
done writing output_jobid_3875704_extracted-surface.h5
done writing output_jobid_3875704_extracted-surface.xdmf
full path: /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875704/output_jobid_3875704_extracted-surface.xdmf
Working on JobID: 3875704
No matching file found for jobid 3875704. Assigning output-fault.xdmf instead
/hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875704/output-fault.xdmf
warning: Mw computed over 0-85s (avoiding contribution of small residual moment after rupture)
jobid_3875704 moment magnitude: -inf (M0 = 0.0000e+00)
Finished writing /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875704/moment_rate_mainshock.png
No matching file found for jobid 3875704. Looking for output-fault.xdmf instead
mu_s: 0.3
mu_d: 0.5
done writing /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875704/output_jobid_3875704_extracted-fault.xdmf
full path: /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875704/output_jobid_3875704_extracted-fault.xdmf
done writing /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875704/output_jobid_3875704_extracted-fault.h5
Job ID set as: 3875704
mu_s: 0.3
mu_d: 0.5
~/haiti-rupture-inputs/dynamic-rupture/regional-only/automated-runs/yaml_build_test/job_SHmax_40.0_nu_0.0
